--- a/app/src/main/res/navigation/main_navigation_graph.xml
+++ b/app/src/main/res/navigation/main_navigation_graph.xml
@@ -7,7 +7,7 @@
 
     <fragment
         android:id="@+id/firstFragment"
-        android:name="com.daniyalirfan.kotlinbasewithcorutine.ui.firstfragment.FirstFragment"
+        android:name="com.amirjaveed.kotlinbasewithmvvm.ui.firstfragment.FirstFragment"
         android:label="first_fragment"
         tools:layout="@layout/first_fragment" />
 </navigation>
